Use colormapper widget installed from local repo

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ packages = find:
 include_package_data = True
 install_requires =
     trame>=2.0.0rc2
-    # vtk
+    vtk
     # pandas
     # numpy
     # altair
